ingress/deploy-home.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-home 
  labels: 
    app: nginx-home 
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: nginx-home 
  template: 
    metadata: 
      name: nginx-home 
      labels: 
        app: nginx-home 
    spec: 
      containers: 
      - name: nginx-container 
        image: nginx:latest 
        ports: 
        - name: nginx-port 
          containerPort: 80
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: my-svc-home 
spec: 
  type: ClusterIP
  selector: 
    app: nginx-home 
  ports: 
  - name: my-svc-port 
    protocol: TCP 
    port: 80
    targetPort: 80
