ingress/deploy-laptop.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: tomcat-laptop
  labels: 
    app: tomcat-laptop
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: tomcat-laptop
  template: 
    metadata: 
      name: tomcat-laptop
      labels: 
        app: tomcat-laptop
    spec: 
      containers: 
      - name: tomcat-container 
        image: tomcat:latest 
        ports: 
        - name: tomcat-port 
          containerPort: 8080
...
---
apiVersion: v1 
kind: Service 
metadata: 
  name: my-svc-laptop
spec: 
  type: ClusterIP
  selector: 
    app: tomcat-laptop
  ports: 
  - name: my-svc-port 
    protocol: TCP 
    port: 8080
    targetPort: 8080
